--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ obs-wrapper = { path = "../rust-obs-plugins" }
 regex = "1"
 anyhow = "1.0"
 ammolite-math = { git = "https://github.com/metaview-org/ammolite", branch = "master" }
+lazy_static = "1.4"
+smallvec = "1.3"
+fourier = "0.1"
+num-complex = "0.2"
+paste = "0.1.7"
