--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ smallvec = "1.3"
 fourier = "0.1"
 num-complex = "0.2"
 paste = "0.1.7"
+ordered-float = "1.0"
+stft = { git = "https://github.com/snd/stft", branch = "master" }
