--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-obs-wrapper = { path = "../rust-obs-plugins" }
-obs-sys = { path = "../rust-obs-plugins/obs-sys" }
+obs-wrapper = { git = "https://github.com/Limeth/rust-obs-plugins" }
+obs-sys = { git = "https://github.com/Limeth/rust-obs-plugins" }
+# obs-wrapper = { path = "../rust-obs-plugins" }
+# obs-sys = { path = "../rust-obs-plugins/obs-sys" }
 regex = "1"
 anyhow = "1.0"
-ammolite-math = { git = "https://github.com/metaview-org/ammolite", branch = "master" }
+ammolite-math = { git = "https://github.com/metaview-org/ammolite" }
 lazy_static = "1.4"
 smallvec = "1.3"
 fourier = "0.1"
