--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ num-complex = "0.2"
 paste = "0.1.7"
 ordered-float = "1.0"
 apodize = "1.0"
+downcast = { package = "downcast-rs", version = "1.1" }
